--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "kirby cookie approval plugin",
   "author": "Timo Schneider",
   "license": "MIT",
-  "version": "0.3.0",
-  "type": "kirby-plugin"
+  "version": "0.4.0",
+  "type": "kirby-plugin",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/schnti/kirby-cookie"
+  }
 }
